syntax = "proto3";

package com.mocker.rest;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preserve_unknown_fields: false
};

message MockResponseSnippet {
  int64 responseId = 1;
  string name = 2;
  int32 statusCode = 3;
  string full_path = 4;
}