syntax = "proto3";

package com.mocker.rest;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preserve_unknown_fields: false
};

message ModelSnippet {
  int64 modelId = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
}