syntax = "proto3";

package com.mocker.rest;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preserve_unknown_fields: false
};

message ServiceSnippet {
  string name = 1;
  string path = 2;
  google.protobuf.StringValue url = 3;
  int64 total_mocks = 4;
  int64 total_models = 5;
}